Add spring-boot plugin

--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,12 @@
             <version>${lombok}</version>
         </dependency>
 
-
-
     </dependencies>
 
+
+
     <build>
+        <finalName>exam-system</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -86,6 +87,17 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
